--- a/index.html
+++ b/index.html
@@ -33,14 +33,8 @@
 		<a href="javascript:void(0)" class="slider-prev"><i class="fas fa-angle-left slider-prev-icon"></i></a>
 		<a href="javascript:void(0)" class="slider-next"><i class="fas fa-angle-right slider-next-icon"></i></a>
 
-		<div class="controller">
-			<a href="javascript:void(0)" class="controller-bar controller-active" data-index="0"><span class="controller-icon"></span></a>
-			<a href="javascript:void(0)" class="controller-bar" data-index="1"><span class="controller-icon"></span></a>
-			<a href="javascript:void(0)" class="controller-bar" data-index="2"><span class="controller-icon"></span></a>
-		</div>
+		<div class="controller"></div>
 	</div>
-
-	
 	
 	<script src="js/app.js"></script>
 </body>
